integration_tests/tests/integration_tests/snapshots/integration_tests__das_options_tests__show_zero_balance_filter_being_set_to_false.snap
---
source: integration_tests/tests/integration_tests/das_options_tests.rs
expression: response
---
{
  "total": 0,
  "limit": 1000,
  "token_accounts": [],
  "cursor": null,
  "errors": []
}
